# gxe-simulator

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  generate_profiling_data.sh  generate_single_dataset.sh  generate_tiny_test.sh  pyproject.toml  simulate_genotype.ipynb  submit_dataset_generation.sh  test_uv_setup.sh
sbatch/: generate_datasets.sbatch  profile_genie.sbatch
scripts/: compute_mv_maf.py  simulate_annot_env_param.py  simulate_covars.py  simulate_genotype.py  vcor_to_maf_ld.py
sim_data/n100_N100_L1/: covariates.csv  environment.csv  genotypes.bed  genotypes.bim  genotypes.fam  phenotype.csv
sim_data/n200_N200_L1/: covariates.csv  environment.csv  genotypes.bed  genotypes.bim  genotypes.fam  genotypes.nosex  phenotype.csv
sim_data/n500_N500_L1/: covariates.csv  environment.csv  genotypes.bed  genotypes.bim  genotypes.fam  genotypes.nosex  phenotype.csv
sim_data/tiny_N100_L1/: covariates.csv  environment.csv  genotypes.bed  genotypes.bim  genotypes.nosex  phenotype.csv
sim_data/tiny_N500_L1/: covariates.csv  environment.csv  phenotype.csv
